--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hahah</h1>
+    <h1 id="h1">hahah</h1>
+    <div id="app">
+        {{ msg }}
+        {{ aaa }}
+    </div>
+
+    <script src="./lib/jquery.min.js"></script>
+    <script>
+        $(function() {
+            $('#h1').html('哈哈哈哈哈');
+        })
+    </script>
 </body>
 </html>
